Wed Aug 20 17:15:04 2014  Masayoshi Takahashi  <takahashimm@gmail.com>

	* lib/review/book/chapter.rb: remove unused method Chapter.for_stdin and Chapter.for_path

Wed Aug 20 01:51:02 2014  Masayoshi Takahashi  <takahashimm@gmail.com>

	* lib/review/book/parameters.rb: remove ReVIEW::Book::Parameters

Wed Aug 20 00:30:07 2014  Masayoshi Takahashi  <takahashimm@gmail.com>

	* lib/review/book/parameters.rb, lib/review/book/base.rb,
	  test/test_book.rb, test/test_book_parameter.rb:

	  remove unused method: ReVIEW::Book::Parameters.default and ReVIEW::Book::Parameters.load

Thu Aug  7 16:25:23 2014  KADO Masanori  <kdmsnr@gmail.com>

	* lib/review/book/base.rb (Base#prefaces, postscripts):
	  remove implicit prefaces and postscripts.

Wed Aug  6 18:55:31 2014  KADO Masanori  <kdmsnr@gmail.com>

	* bin/review-catalog-converter: add review-catalog-converter for
	  converting old style catalog files into a new style catalog.yml file.

Thu Jul 31 15:05:34 2014  Kenshi Muto  <kmuto@debian.org>

	* lib/review/htmlbuilder.rb, lib/review/idgxmlbuilder.rb: 
	  provides warning message if image couldn't be found.

Sun Jun 29 22:12:58 2014  Masanori Kado <kdmsnr@gmail.com>

	* Release 1.3.0.

Sun Jun 29 10:40:02 2014  Kenshi Muto  <kmuto@debian.org>

	* Now review-epubmaker-ng becomes review-epubmaker.
	  Previous review-epubmaker is renamed to review-epubmaker-legacy.
	  We believe new review-epubmaker has a compatibility with
	  previous version, but please inform us if you meet a different
	  behavior. See doc/libepubmaker/config.yml for details of
	  configurations.

Fri Jun 27 22:49:17 2014  Kenshi Muto  <kmuto@debian.org>

	* lib/epubmaker/epubv2.rb: insert dummy <span> element with
	  double-width space in tree toc when <li> element has only
	  child <ol> element. Closes #285.

Tue Jun 17 10:36:31 2014  Masayoshi Takahashi  <takahashimm@gmail.com>

	* lib/review/book/base.rb:
	  remove (rarely used) features.
	   * ignore ./config.rb file