@@ -593,9 +593,9 @@ module ReVIEW
 
     def inline_chap(id)
       if @book.config["chapterlink"]
-        "\\hyperref[chap:#{id}]{#{@chapter.env.chapter_index.number(id)}}"
+        "\\hyperref[chap:#{id}]{#{@chapter.book.chapter_index.number(id)}}"
       else
-        @chapter.env.chapter_index.number(id)
+        @chapter.book.chapter_index.number(id)
       end
     rescue KeyError
       error "unknown chapter: #{id}"
@@ -604,9 +604,9 @@ module ReVIEW
 
     def inline_title(id)
       if @book.config["chapterlink"]
-        "\\hyperref[chap:#{id}]{#{@chapter.env.chapter_index.title(id)}}"
+        "\\hyperref[chap:#{id}]{#{@chapter.book.chapter_index.title(id)}}"
       else
-        @chapter.env.chapter_index.title(id)
+        @chapter.book.chapter_index.title(id)
       end
     rescue KeyError
       error "unknown chapter: #{id}"
