@@ -1,3 +1,9 @@
+Wed Aug 30 21:34:35 2014  Masayoshi Takahashi  <takahashimm@gmail.com>
+
+	* lib/review/book/compilable.rb: remove ReVIEW::Book::Compilable#env
+
+	  You should use ReVIEW::Book::Compilable#book.
+
 Wed Aug 20 17:15:04 2014  Masayoshi Takahashi  <takahashimm@gmail.com>
 
 	* lib/review/book/chapter.rb: remove unused method Chapter.for_stdin and Chapter.for_path
